2008-01-12  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: 'background' is implemented.

2008-01-12  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: 'border', 'border-top', 'border-right', 'border-bottom',
	'border-left', and 'outline' are implemented.  White space characters
	were not allowed between property name and COLON.  NUMBER and
	DIMENSION are not allowed as color in quirks mode.

2008-01-06  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: The object now has new device-dependent
	parameter, |has_invert|.

	* Parser.pm: The object now has new device-dependent
	parameter, |clip_color| function.
	(parse_char_string): Inifinite-loop fixed for ignoring
	states.  No longer check for '(' and '[' matchings for 
	compatibility with browsers.
	($default_serializer): Support for 'RGBA' data type.
	(color): Reimplemented.
	(backbround-color, border-top-color, border-right-color,
	border-bottom-color, border-left-color, outline-color): Implemented.

2008-01-06  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (background-position, background-position-x,
	background-position-y): Implemented.

2008-01-06  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (border-spacing serialize_multiple): Implemented.

2008-01-06  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Disallow '-' without following NUMBER or DIMENSION.
	(border-width serialize): Was incorrect.

2008-01-05  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (-manakai-border-spacing-x, -manakai-border-spacing-y,
	border-spacing): Implemented.

2008-01-04  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (letter-spacing, word-specing, text-indent,
	outline-width): Implemented.
	(outline-style): Don't allow 'hidden'.

2008-01-04  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm ($default_serializer): Support for
	the |PERCENTAGE| data type.
	(padding-top, border-top-width): The parser now
	refers the parser of the 'margin-top'.
	(width, height, min-width, min-height, max-width, max-height,
	vertical-align, line-height): Implemented.
