@@ -1,5 +1,9 @@
 2008-01-12  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm: 'font' is implemented.
+
+2008-01-12  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm: 'background' is implemented.
 
 2008-01-12  Wakaba  <wakaba@suika.fam.cx>
